--- a/radar_parlamentar/radar_parlamentar/templates/analise.html
+++ b/radar_parlamentar/radar_parlamentar/templates/analise.html
@@ -7,6 +7,7 @@
 
 {% block extrascripts %}
     <link rel="stylesheet" href="/static/files/codes/css/radar_d3_graph.css" type="text/css" />
+    <link rel="stylesheet" href="/static/files/codes/css/analise.css" type="text/css" />
 {% endblock extrascripts %}
 
 {% block extrahead %}
@@ -81,7 +82,11 @@
                 
             </div>
         </div>
-
+        <div class="dropdown">
+            <button class="dropbtn">Chefe(s) do executivo   </button>
+            <div class="dropdown-content" id="dropdown-chefes">
+            </div>
+         </div>
         <!-- Overlay background -->
         <div = id="overlay-bg"></div>
 
