Adicionando 3 arquivos minificados de 3 CSS, style, orange-green e reset. E colocando-os no base.html

--- a/radar_parlamentar/radar_parlamentar/templates/base.html
+++ b/radar_parlamentar/radar_parlamentar/templates/base.html
@@ -25,8 +25,8 @@
     <!-- end of popup tutorial -->
 
     <!-- CSS Libraries and codes -->
-        <link rel="stylesheet" type="text/css" href="/static/files/codes/css/reset.css" />
-        <link rel="stylesheet" href="/static/files/codes/css/style.css" type="text/css" />
+        <link rel="stylesheet" type="text/css" href="/static/files/codes/css/reset.min.css" />
+        <link rel="stylesheet" href="/static/files/codes/css/style.min.css" type="text/css" />
         <link rel="stylesheet" href="/static/files/codes/css/prettyPhoto.css" type="text/css" />
 
     {% if request.get_host == '127.0.0.1:8000' or request.get_host == 'localhost:8000' %}
@@ -424,7 +424,7 @@
         <link rel="stylesheet" type="text/css" href="/files/codes/css/ie9.css" media="all" />
     <![endif]-->
 
-    <link rel="stylesheet" id="colors" href="/static/files/codes/css/colors/orange-green.css" type="text/css" />
+    <link rel="stylesheet" id="colors" href="/static/files/codes/css/colors/orange-green.min.css" type="text/css" />
 
 {% block extrajsend %}
 {% endblock extrajsend %}
