Adicionando spaceless na base.html

--- a/radar_parlamentar/radar_parlamentar/templates/base.html
+++ b/radar_parlamentar/radar_parlamentar/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" class="no-js">
 <head>
+{% spaceless %}
     <meta charset="utf-8"/>
     <meta content="text/html"/>
     <meta name="distribution" content="global"/>
@@ -46,6 +47,22 @@
           }
         </script>
 
+
+    {% if request.get_host != '127.0.0.1:8000' and  request.get_host != 'localhost:8000' %}
+        <script type="text/javascript">
+
+          var _gaq = _gaq || [];
+          _gaq.push(['_setAccount', 'UA-11505683-7']);
+          _gaq.push(['_trackPageview']);
+
+          (function() {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+          })();
+        </script>
+    {% endif %}
+
         <!-- the jQuery library -->
         <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script type="text/javascript">
@@ -64,9 +81,10 @@
 {% block extrahead %}
 {% endblock extrahead %}
 </script>
+{% endspaceless %}
 </head>
 <body>
-
+    {% spaceless %}
     <script type="text/javascript">
     window.onload = function() {
       mobile_drop();
@@ -79,7 +97,8 @@
         }
     }
     </script>
-
+    {% endspaceless %}
+    {% spaceless %}
     <header id="header" {%block headerAttr %} {% endblock headerAttr %}>
         <a href="/sim-voto-aberto"><img alt="Voto aberto: Eu apoio!" src="/static/assets/votoaberto/vaberto_branco.svg" style="position: absolute; top: 12px; right: 0; border: 0; z-index:1000;"></a>
         <div class="bar"></div><!-- the top border -->
@@ -104,7 +123,6 @@
                                 <li><a href="/importadores">Acrescenta mais uma!</a></li>
                             </ul>
                         </li>
-
                         <!-- Gênero -->
                        	<li id="generos">
                             <a id="genero" href="javascript:void(0)">Gênero</a>
@@ -160,8 +178,9 @@
             </hgroup>
         </section><!-- end of #imageBox -->
     </header><!-- end of #header -->
-        {% endblock imageBox %}
-
+      {% endblock imageBox %}
+    {% endspaceless %}
+    {% spaceless %}
     <section id="content">
         <ul class="breadcrumbs">
             {% block breadcrumbs %}{% endblock breadcrumbs %} 
@@ -176,8 +195,9 @@
                 {% endfor %}
             </ul>
         {% endif %}
-        {% block content %}{% csrf_token %}{% endblock content %}     
-
+        {% block content %}{% csrf_token %}{% endblock content %}
+    {% endspaceless %}
+    {% spaceless %}
         <section class="cols">
             <div class="half">
                 <div class="stHead"><h4>Lei de acesso a informações públicas</h4></div>
@@ -279,111 +299,112 @@
             </div><!-- end of .half -->
         </section><!-- end of .cols -->
     </section><!-- end of #content -->
-
+    {% endspaceless %}
+    {% spaceless %}
     <footer id="footer">
-        <div class="top">
-            <div class="wrap">
-                <section class="cols">
-                    <div class="oneThird">
-                        <div class="stHead"><h2>Links</h2></div>
-                        <div class="col2Links">
-                            <ul class="links">
-                                <li><a href="http://www.planalto.gov.br/ccivil_03/_Ato2011-2014/2011/Lei/L12527.htm">Lei 12527/2011 - Lei de Acesso a Informações Públicas</a></li>
-                                <li><a href="http://dados.gov.br/">Portal Brasileiro de Dados Abertos</a></li>
-                                <li><a href="http://polignu.org/">PoliGNU</a></li>
-                            </ul><!-- end of .links -->
-                            <ul class="links">
-                                <li><a href="http://www.camara.sp.gov.br/index.php?option=com_wrapper&view=wrapper&Itemid=219">Base de Dados da Câmara Municipal de São Paulo</a></li>
-                                <li><a href="http://www2.camara.gov.br/transparencia/dados-abertos">Base de Dados da Câmara dos Deputados</a></li>
-                                <li><a href="http://www.senado.gov.br/transparencia/dadosAbertos/dadosAbertos.asp">Base de Dados do Senado</a></li>
-                            </ul><!-- end of .links -->
-                        </div><!-- end of .col2Links -->
-                    </div><!-- end of .oneThird -->
-                    <div class="oneThird">
-                        <div class="stHead"><h2>Primeiros Posts</h2></div>
-                        <ul class="miniBlogList">
-                            <li>
-                                <a href="#">
-                                    <img src="/static/assets/blogs/mini-list/b-thumb1.jpg" class="border" height="50" width="50" alt="Blog Image" />
-                                </a>
-                                <h5><a href="http://polignu.org/projeto/camaraws/camaraws3">Camaraws: Análise de Partidos na Câmara dos Deputados</a></h5>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="/static/assets/blogs/mini-list/b-thumb2.jpg" class="border" height="50" width="50" alt="Blog Image" />
-                                </a>
-                                <h5><a href="http://polignu.org/projeto/camaraws/pca">Análise gráfica das votações da câmara dos deputados</a></h5>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <img src="/static/assets/blogs/mini-list/b-thumb3.jpg" class="border" height="50" width="50" alt="Blog Image" />
-                                </a>
-                                <h5><a href="http://polignu.org/projeto/camaraws/análise-automatizada-da-semelhança-entre-os-partidos-políticos">Análise automatizada da semelhança entre os partidos políticos</a></h5>
-                            </li>
-                        </ul>
-                    </div><!-- end of .oneThird -->
-                    <div class="oneThird">
-                        
-                            <div class="stHead"><h2>CONTATE-NOS</h2></div>
-                            <ul class="address">
-    <!--                            <li class="street">Av. Prof. Almeida Prado, trav. 2, n.83, sala S-33 - Edif. de Eng. Civil - Cid. Universitária - São Paulo - SP 05508-900 Brasil</li>
-                                <!-- <li class="phone">+55-11-3091-5690</li> -->
-                                <li class="email"><a href="mailto:radarparlamentar@polignu.org" rel="nofollow">radarparlamentar@polignu.org</a></li>
-                    <li class="email"><a href="mailto:radar@polignu.org" rel="nofollow">radar@polignu.org (lista aberta)</a></li>
-                                <!-- <li class="skype"><a href="skype:circles_support?add" rel="nofollow">circles_support</a></li> -->
-                            </ul><!-- end of .address -->
-                        
-                            <div class="stHead"><h2>APOIO</h2></div>
-                                <ul class="miniBlogList">
-                                    <li>
-                                        <a href="http://unb.br" target="_blank">
-                                            <img src="/static/assets/apoio/unb.jpeg" class="border" height="25" width="90" alt="UnB" />
-                                        </a>
-                                        <h5><a href="http://unb.br" target="_blank">Universidade de Brasília</a></h5>
-                                    </li>
-                                    <li>
-                                        <a href="http://imasters.com.br/" target="_blank">
-                                            <img src="/static/assets/apoio/iMasters.png" class="border" height="30" width="90" alt="iMasters" />
-                                        </a>
-                                        <h5><a href="http://imasters.com.br/" target="_blank">iMasters</a></h5>
-                                    </li>
-                                    <li>
-                                        <a href="http://ccsl.ime.usp.br/" target="_blank">
-                                            <img src="/static/assets/apoio/ccsl.png" class="border" height="25" width="90" alt="CCSL" />
-                                        </a>
-                                        <h5><a href="http://ccsl.ime.usp.br/" target="_blank">Centro de Competência de Software Livre</a></h5>
-                                    </li>
-                                </ul>
-                        
-                    </div><!-- end of .oneThird -->
-                </section><!-- end of .cols -->
-            </div><!-- end of .wrap -->
-        </div><!-- end of .top -->
-        <section class="bottom">
-            
-            <div class="contents">
-                <p class="copy">
-                    Copyright &copy; 2012 | 
-					<a href="http://www.gnu.org/licenses/agpl">Alguns Direitos Reservados: Affero GPL</a> | 
-                    <a href="https://github.com/radar-parlamentar/radar/">Código Fonte deste projeto</a> 
-				</p>
-                <ul class="socialLinks">
-                    <li class="twitter"><a href="https://twitter.com/#!/RadarParlamento">Twitter</a></li>
-                    <li class="facebook"><a href="https://www.facebook.com/RadarParlamentar">Facebook</a></li>
+            <div class="top">
+                <div class="wrap">
+                    <section class="cols">
+                        <div class="oneThird">
+                            <div class="stHead"><h2>Links</h2></div>
+                            <div class="col2Links">
+                                <ul class="links">
+                                    <li><a href="http://www.planalto.gov.br/ccivil_03/_Ato2011-2014/2011/Lei/L12527.htm">Lei 12527/2011 - Lei de Acesso a Informações Públicas</a></li>
+                                    <li><a href="http://dados.gov.br/">Portal Brasileiro de Dados Abertos</a></li>
+                                    <li><a href="http://polignu.org/">PoliGNU</a></li>
+                                </ul><!-- end of .links -->
+                                <ul class="links">
+                                    <li><a href="http://www.camara.sp.gov.br/index.php?option=com_wrapper&view=wrapper&Itemid=219">Base de Dados da Câmara Municipal de São Paulo</a></li>
+                                    <li><a href="http://www2.camara.gov.br/transparencia/dados-abertos">Base de Dados da Câmara dos Deputados</a></li>
+                                    <li><a href="http://www.senado.gov.br/transparencia/dadosAbertos/dadosAbertos.asp">Base de Dados do Senado</a></li>
+                                </ul><!-- end of .links -->
+                            </div><!-- end of .col2Links -->
+                        </div><!-- end of .oneThird -->
+                        <div class="oneThird">
+                            <div class="stHead"><h2>Primeiros Posts</h2></div>
+                            <ul class="miniBlogList">
+                                <li>
+                                    <a href="#">
+                                        <img src="/static/assets/blogs/mini-list/b-thumb1.jpg" class="border" height="50" width="50" alt="Blog Image" />
+                                    </a>
+                                    <h5><a href="http://polignu.org/projeto/camaraws/camaraws3">Camaraws: Análise de Partidos na Câmara dos Deputados</a></h5>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="/static/assets/blogs/mini-list/b-thumb2.jpg" class="border" height="50" width="50" alt="Blog Image" />
+                                    </a>
+                                    <h5><a href="http://polignu.org/projeto/camaraws/pca">Análise gráfica das votações da câmara dos deputados</a></h5>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <img src="/static/assets/blogs/mini-list/b-thumb3.jpg" class="border" height="50" width="50" alt="Blog Image" />
+                                    </a>
+                                    <h5><a href="http://polignu.org/projeto/camaraws/análise-automatizada-da-semelhança-entre-os-partidos-políticos">Análise automatizada da semelhança entre os partidos políticos</a></h5>
+                                </li>
+                            </ul>
+                        </div><!-- end of .oneThird -->
+                        <div class="oneThird">
 
-                    <!-- <li class="dribbble"><a href="#">Dribbble</a></li>
-                    <li class="flickr"><a href="#">Flickr</a></li> -->
+                                <div class="stHead"><h2>CONTATE-NOS</h2></div>
+                                <ul class="address">
+        <!--                            <li class="street">Av. Prof. Almeida Prado, trav. 2, n.83, sala S-33 - Edif. de Eng. Civil - Cid. Universitária - São Paulo - SP 05508-900 Brasil</li>
+                                    <!-- <li class="phone">+55-11-3091-5690</li> -->
+                                    <li class="email"><a href="mailto:radarparlamentar@polignu.org" rel="nofollow">radarparlamentar@polignu.org</a></li>
+                        <li class="email"><a href="mailto:radar@polignu.org" rel="nofollow">radar@polignu.org (lista aberta)</a></li>
+                                    <!-- <li class="skype"><a href="skype:circles_support?add" rel="nofollow">circles_support</a></li> -->
+                                </ul><!-- end of .address -->
 
-                </ul><!-- end of socialLinks -->
-                
-                <p class="version">
-                    {% load versao_radar %}
-                    {% versao_radar %}
-                </p> <!-- end of version -->
-            </div><!-- end of .contents -->
-        </section><!-- end of .bottom -->
+                                <div class="stHead"><h2>APOIO</h2></div>
+                                    <ul class="miniBlogList">
+                                        <li>
+                                            <a href="http://unb.br" target="_blank">
+                                                <img src="/static/assets/apoio/unb.jpeg" class="border" height="25" width="90" alt="UnB" />
+                                            </a>
+                                            <h5><a href="http://unb.br" target="_blank">Universidade de Brasília</a></h5>
+                                        </li>
+                                        <li>
+                                            <a href="http://imasters.com.br/" target="_blank">
+                                                <img src="/static/assets/apoio/iMasters.png" class="border" height="30" width="90" alt="iMasters" />
+                                            </a>
+                                            <h5><a href="http://imasters.com.br/" target="_blank">iMasters</a></h5>
+                                        </li>
+                                        <li>
+                                            <a href="http://ccsl.ime.usp.br/" target="_blank">
+                                                <img src="/static/assets/apoio/ccsl.png" class="border" height="25" width="90" alt="CCSL" />
+                                            </a>
+                                            <h5><a href="http://ccsl.ime.usp.br/" target="_blank">Centro de Competência de Software Livre</a></h5>
+                                        </li>
+                                    </ul>
+
+                        </div><!-- end of .oneThird -->
+                    </section><!-- end of .cols -->
+                </div><!-- end of .wrap -->
+            </div><!-- end of .top -->
+            <section class="bottom">
+
+                <div class="contents">
+                    <p class="copy">
+                        Copyright &copy; 2012 |
+                        <a href="http://www.gnu.org/licenses/agpl">Alguns Direitos Reservados: Affero GPL</a> |
+                        <a href="https://github.com/radar-parlamentar/radar/">Código Fonte deste projeto</a>
+                    </p>
+                    <ul class="socialLinks">
+                        <li class="twitter"><a href="https://twitter.com/#!/RadarParlamento">Twitter</a></li>
+                        <li class="facebook"><a href="https://www.facebook.com/RadarParlamentar">Facebook</a></li>
+
+                        <!-- <li class="dribbble"><a href="#">Dribbble</a></li>
+                        <li class="flickr"><a href="#">Flickr</a></li> -->
+
+                    </ul><!-- end of socialLinks -->
+
+                    <p class="version">
+                        {% load versao_radar %}
+                        {% versao_radar %}
+                    </p> <!-- end of version -->
+                </div><!-- end of .contents -->
+            </section><!-- end of .bottom -->
     </footer><!-- end of #footer -->
-
+    {% endspaceless %}
 <!-- JavaScript Libraries and Codes -->
     <!-- jQuery hoverIntent plugin -->
     <script style="display: none;" src="/static/files/codes/js/jquery.hoverIntent.min.js"></script>
@@ -416,29 +437,12 @@
         <link rel="stylesheet" type="text/css" href="/files/codes/css/ie9.css" media="all" />
     <![endif]-->
 
-    <link rel="stylesheet" id="colors" href="/static/files/codes/css/colors/orange-green.css" type="text/css" />
-
+    <link rel="stylesheet" id="colors" href="/static/files/codes/css/colors/orange-green.min.css" type="text/css" />
 {% block extrajsend %}
 {% endblock extrajsend %}
 <script type="text/javascript">
 {% block extrascriptsend %}
 {% endblock extrascriptsend %}
 </script>
-
-{% if request.get_host != '127.0.0.1:8000' and  request.get_host != 'localhost:8000' %}
-    <script type="text/javascript">
-    
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-11505683-7']);
-      _gaq.push(['_trackPageview']);
-    
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    
-    </script>
-{% endif %}
 </body>
 </html>
