--- a/radar_parlamentar/radar_parlamentar/templates/genero_matriz.html
+++ b/radar_parlamentar/radar_parlamentar/templates/genero_matriz.html
@@ -51,24 +51,30 @@
         }
     </style>
 
-    <h3> {{casa_legislativa.nome}}</h3>
+    <h3>{{casa_legislativa.nome}}</h3>
      <article id="descricao" class="inwrap">
         O objetivo deste projeto é fazer uma análise gráfica da participação de deputadas e deputados na Câmara Federal.<br/>
         É propósito observar as participações feminina e masculina na casa legislativa, seja do ponto de vista quantitativo, seja do ponto de vista qualitativo.<br/>
         <h4 style="margin-bottom:5px;">O que é este gráfico?</h4>
         <aside id="como-funciona" style="margin: 0 90px 10px 20px; padding: 10px; background-color: rgba(220,220,220,0.7); -webkit-border-radius: 20px; -moz-border-radius: 20px; border-radius: 20px;">
             Trata-se de uma visualização de dados matricial em que as colunas representam os partidos e as palavras mais frequentes são as linhas. A intensidade da cor representa a quantidade de proposições que o partido fez utilizando aquela palavra temática. Quanto mais proposições, mais intensa é a cor. Quanto menos proposições, menos intensa é a cor.<br/>
-            Futuramente esta visualização mostrará também a mesma informação com o recorte de gênero por partido. Ela ainda não foi possível por de dados suficientemente estruturados.
         </aside>
         Analise as frequências de temas por partido e tire suas próprias conclusões.<br/>
     
         Quantidade de palavras-chave consideradas nesta análise: <b>33</b> palavras.<br/><br/>
         Quantidade de partidos consideradas nesta análise: <b>75</b> partidos.<br/><br/>
-        Os dados da Câmara dos Deputados utilizados para análise estão disponíveis para <a href="https://github.com/radar-parlamentar/radar/">download aqui</a>.<br/>    
-    
+        Os dados da Câmara dos Deputados utilizados para análise estão disponíveis para <a href="https://github.com/radar-parlamentar/radar/">download aqui</a>.<br/><br/>
+
+        <p><label for="genero">Gênero:</label>
+        <select id="genero" name="genero">
+            <option value="TODOS">Todos</option>
+            <option value="MASCULINO">Masculino</option>
+            <option value="FEMININO">Feminino</option>
+        </select>
+
         <aside id="legenda" class="list">
         </aside>
-        <figure id="animacao"><center><img id="loading" src="/static/files/images/spinner.gif"></img></center></figure>
+        <figure id="animacao"><img id="loading" src="/static/files/images/spinner.gif"/></figure>
     </article>
         <div style="clear:right"/>
 {% endblock content %}
@@ -91,7 +97,7 @@
 {% endblock extrajsend %}
 
 {% block extrascriptsend %}
-    menuActive("genero");
+    menuActive("generos");
     $(document).ready(function() {
     });
 {% endblock extrascriptsend %}
